[metadata]
name = check_certs_bot
version = 4.4.0
description = Telegram bot for certificate checking with a library
author = Sergey Matveychuk
author_email = sem@semmy.ru
license = MIT
classifiers=
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 5 - Production/Stable

    # Indicate who your project is intended for
    'Intended Audience :: Developers
    'Topic :: Software Development :: Build Tools

    # Pick your license as you wish (should match "license" above)
     'License :: OSI Approved :: MIT License

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 3
    'Programming Language :: Python :: 3.8
keywords = telegram, bot, certificate, x509

[options]
package_dir=
        =src
packages = find:
scripts =
        bin/check_certs.py
        bin/check_certs_bot.py
        bin/periodic_check.py
install_requires =
        certifi
        cryptography
        dnspython>=2.0.0
        ocsp-checker
        pem
        pyOpenSSL
        python-telegram-bot>13.0.0
        pytz
        rpyc
        timeout_decorator
[options.packages.find]
where=src
